--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
+    "cli": "ts-node src/cli.ts",
+    "demo": "ts-node src/demo.ts",
     "test": "jest"
   },
   "keywords": [],
